data: cron update

--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -481,7 +481,7 @@ series:
 
 
           https://www.meetup.com/asociace-ux/events/283616386/'
-        location: Black Bettie's Grill (Mánesova 7, Vinohrady, Praha-Praha 2, Czech Republic 120 00)
+        location: Black Bettie's Grill (Mánesova 1091/7, Vinohrady, Praha-Praha 2, Czech Republic 120 00)
         geo:
           lat: 50.08
           lon: 14.43
