data: cron update

--- a/data/sources/applifting-meetup.yaml
+++ b/data/sources/applifting-meetup.yaml
@@ -139,7 +139,7 @@ series:
       url: https://www.meetup.com/Applifting-meetup-1/events/281290839/
       ical:
         summary: 'Seminář BankID pro firmy: Vše, co potřebujete vědět před integrací BankID'
-        description: 'Applifting meetup
+        description: 'Applifting Crew Talk
 
           Wednesday, October 20 at 4:00 PM
 
