--- a/data/sources/naswp-cz.yaml
+++ b/data/sources/naswp-cz.yaml
@@ -131,8 +131,14 @@ series:
         dtstart: 2021-03-31 18:30:00+02:00
         dtend: 2021-03-31 21:30:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Oct 27, 2021, 6:30 PM: Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity.📢 Program (anotace níže):– 18:30 Úvodní slovo a novinky ze světa WordPre'
-      og_title: 'WordPress pivo #6'
+      meta_description: 'Wed, Oct 27, 6:30 PM CEST: Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity.
+
+
+        📢 Program (anotace níže):
+
+
+        – 18:30 Úvodní slovo a novinky ze světa Wor'
+      og_title: 'WordPress pivo #6 | Meetup'
       image: https://secure.meetupstatic.com/photos/event/6/4/e/c/600_499585836.jpeg
       url: https://www.meetup.com/naswp-cz/events/281506962/
       ical:
