--- a/data/sources/frontendisti.yaml
+++ b/data/sources/frontendisti.yaml
@@ -200,11 +200,11 @@ series:
 
 
         Dorazit můžete **NAŽIVO** do Brna do kanceláři SUPERKODERS. ALe pokud je to od vás do Brna daleko, připojte s'
-      og_title: Designové nástroje a spolupráce s front-end vývojáři | Frontedisti.cz LIVE | Meetup
+      og_title: Nástroje pro design webu a spolupráce s designéry | Frontedisti.cz LIVE | Meetup
       image: https://secure.meetupstatic.com/photos/event/1/2/2/6/600_498544646.jpeg
       url: https://www.meetup.com/frontendisti/events/mbjhpsydcfbmb/
       ical:
-        summary: Designové nástroje a spolupráce s front-end vývojáři | Frontedisti.cz LIVE
+        summary: Nástroje pro design webu a spolupráce s designéry | Frontedisti.cz LIVE
         description: 'Frontendisti.cz
 
           Wednesday, March 9 at 6:00 PM
