--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -889,3 +889,27 @@ series:
         url: https://www.meetup.com/typedb-prague/events/284314816/
         dtstart: 2022-03-15 18:30:00+01:00
         dtend: 2022-03-15 19:30:00+01:00
+  - meetupcom:
+      meta_description: 'Tue, Mar 22, 6:30 PM CEST: Semantic Web technologies enable us to represent and query for very complex and heterogeneous datasets. We can add semantics and reason over large bodies of data on the web'
+      og_title: Comparing Semantic Web Technologies to TypeDB | Meetup
+      url: https://www.meetup.com/typedb-prague/events/284332665/
+      ical:
+        summary: Comparing Semantic Web Technologies to TypeDB
+        description: 'TypeDB Prague Engineers
+
+          Tuesday, March 22 at 6:30 PM
+
+
+          Semantic Web technologies enable us to represent and query for very complex and heterogeneous datasets. We can add semantics and reason over large bod...
+
+
+          https://www.meetup.com/typedb-prague/events/284332665/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_284332665@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/284332665/
+        dtstart: 2022-03-22 18:30:00+01:00
+        dtend: 2022-03-22 19:30:00+01:00
